[package]
name = "ttt"
version = "0.1.0"
authors = ["Moritz Breipohl <mbreipohl@techfak.de>"]
edition = "2021"
default-run = "ttt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
derive_builder = "0.12.0"
expectrl = "0.6.0"
# Using older nix version because expectrl uses it.
# Nix changed error handling and this was not compatible
nix = "0.21.2"
pest = "2.5.3"
pest_derive = "2.5.3"
thiserror = "1.0.38"
